[tool.poetry]
name = "dsa"
version = "0.1.0"
description = ""
authors = ["Willen Leal <willenlealdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"

[tool.mypy]
python_version = 3.12
enable_incomplete_feature = ["NewGenericSyntax"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
